<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Event Management </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Events</string>
    <string name="plus">"+"</string>
    <string name="adduser">"Add Event"</string>
    <string name="user">"User"</string>
    <string name="hint">"Enter User's Name"</string>
    <string name="save">"Save"</string>
    <string name="cancel">"Cancel"</string>
    <string name="adduseractivitylabel">"Add User Activity"</string>
</resources>