<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:paddingBottom="8dp"
    android:layout_marginBottom="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <!-- Refresh Icon -->

    <ImageView
        android:id="@+id/refreshIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/appNameTextView"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="14dp"
        android:layout_toEndOf="@id/appNameTextView"
        android:clickable="true"
        android:onClick="refreshData"
        android:src="@drawable/ic_action_refresh" />

    <ImageView
        android:id="@+id/getWebData"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:clickable="true"
        android:onClick="SyncDataFromWebBased"
        android:src="@drawable/ic_action_synctoweb" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appNameTextView"
        android:background="#cc0000"
        android:paddingBottom="8dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
        <Button
            android:id="@+id/button1"
            android:layout_width="41dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#ffd700"
            android:onClick="addEvent"
            android:text="@string/plus"
            android:textColor="#cc0000"
            android:textSize="30sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="8dp"
        android:layout_marginTop="40dp">
        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="8dp"
            android:paddingBottom="10dp"
            android:layout_alignParentLeft="true">
        </ListView>
    </RelativeLayout>
</RelativeLayout>
